fluxcd/clusters/pi/home/n8n/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n
  namespace: home
  labels:
    app: n8n
spec:
  serviceName: n8n
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      name: n8n
      namespace: home
      labels:
        app: n8n
    spec:
      terminationGracePeriodSeconds: 120
      securityContext:
        fsGroup: 1000
      containers:
        - name: n8n
          image: n8nio/n8n:latest
          ports:
            - containerPort: 5678
              name: n8n-port
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1500Mi"
              cpu: "1000m"
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 5"]
          volumeMounts:
            - name: n8n-data
              mountPath: /home/node/.n8n
  volumeClaimTemplates:
    - metadata:
        name: n8n-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 5Gi
