fluxcd/clusters/pi/home/n8n/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: home
spec:
  selector:
    app: n8n
  ports:
    - name: n8n-port
      port: 80
      targetPort: n8n-port
